--- a/IA/inteligencia artificial.ipynb
+++ b/IA/inteligencia artificial.ipynb
@@ -216,11 +216,45 @@
     "\n",
     "Implicaciones éticas: Cuestiones sobre la responsabilidad, el impacto en el empleo y el uso de la IA para fines no deseados."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "952b774f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 2\n",
+    "b = 6\n",
+    "print (a + b)"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
